[gd_scene load_steps=2 format=3 uid="uid://debuw7u574qlm"]

[ext_resource type="Script" path="res://scripts/gameover.gd" id="1_k5re8"]

[node name="gameover" type="CanvasLayer"]
script = ExtResource("1_k5re8")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -13.0
offset_right = 65.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
text = "GAME OVER BRO"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HighScoreLabel" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -55.0
offset_right = 20.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4

[node name="LastScoreLabel" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -23.0
offset_right = 0.5
grow_horizontal = 2
grow_vertical = 0

[node name="retry" type="Button" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 56.0
grow_vertical = 2
text = "RETRY"

[node name="quit" type="Button" parent="."]
show_behind_parent = true
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -47.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
text = "QUIT"

[connection signal="pressed" from="retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
